updating config.json

--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "theme": "tvpage",
     "disablePathToLower": true,
     "enableRobotsTXT": true,
-    "galleryChannelIds": "",
+    "galleryChannelIds": "130175090",
     "params": {
         "loginId": "1758927",
         "subfolder": "",
